--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,500');
 * {
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
   vertical-align: baseline;
 }
 
@@ -14,87 +14,86 @@ div {
 body {
   background-color: #333;
   color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
 }
 
 .footer {
-  width: 450px;
-  text-align: center;
+  color: white;
   display: block;
-  margin: 15px auto 30px auto;
-  font-size: 0.8em;
-  color: #fff;
+  font-size: .8em;
+  margin: 15px auto 30px;
+  text-align: center;
+  width: 450px;
 }
 .footer a {
+  color: white;
   font-weight: 500;
   text-decoration: none;
-  color: #fff;
 }
 
 #quote-box {
+  background-color: white;
   border-radius: 3px;
+  display: table;
+  padding: 40px 50px;
   position: relative;
   width: 450px;
-  padding: 40px 50px;
-  display: table;
-  background-color: #fff;
 }
 #quote-box .quote-text {
+  clear: both;
+  font-size: 1.75em;
+  font-weight: 500;
   text-align: center;
   width: 450px;
   height: auto;
-  clear: both;
-  font-weight: 500;
-  font-size: 1.75em;
 }
 #quote-box .quote-text i {
   font-size: 1em;
-  margin-right: 0.4em;
+  margin-right: .4em;
 }
 #quote-box .quote-author {
+  clear: both;
+  font-size: 1em;
+  padding-top: 20px;
+  text-align: right;
   width: 450px;
   height: auto;
-  clear: both;
-  padding-top: 20px;
-  font-size: 1em;
-  text-align: right;
 }
 #quote-box .buttons {
-  width: 450px;
-  margin: auto;
   display: block;
+  margin: auto;
+  width: 450px;
 }
 #quote-box .buttons .button {
-  height: 38px;
+  background-color: #333;
   border: none;
   border-radius: 3px;
-  color: #fff;
-  background-color: #333;
-  outline: none;
-  font-size: 0.85em;
-  padding: 8px 18px 6px 18px;
+  color: white;
+  cursor: pointer;
+  font-size: .85em;
+  height: 38px;
   margin-top: 30px;
   opacity: 1;
-  cursor: pointer;
+  outline: none;
+  padding: 8px 18px 6px;
 }
 #quote-box .buttons .button:hover {
-  opacity: 0.9;
+  opacity: .9;
 }
-#quote-box .buttons .button#tweet-quote,
-#quote-box .buttons .button#tumblr-quote {
+#quote-box .buttons .button#tumblr-quote,
+#quote-box .buttons .button#tweet-quote {
   float: left;
-  padding: 0px;
-  padding-top: 8px;
-  text-align: center;
   font-size: 1.2em;
   margin-right: 5px;
-  height: 30px;
+  padding: 8px 0 0;
+  text-align: center;
   width: 40px;
+  height: 30px;
 }
 #quote-box .buttons .button#new-quote {
   float: right;
